--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
         </ol>
         <div class="carousel-inner" role="listbox">
             <div class="item active" align="center">
-                <img src="style/img/banner1.png" alt="" onload="DrawImage(this)"/>
+                <img src="style/img/banner1.png" alt=""/>
             </div>
             <div class="item" align="center">
-                <img src="style/img/banner3.png" alt="" onload="DrawImage(this)">
+                <img src="style/img/banner3.png" alt=""/>
             </div>
             <div class="item" align="center">
-                <img src="style/img/banner4.png" alt="" onload="DrawImage(this)">
+                <img src="style/img/banner4.png" alt="" />
             </div>
         </div>
         <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
