--- a/Application.html
+++ b/Application.html
@@ -37,7 +37,7 @@
                 </li>
             </ul>
             <div class="nav navbar-right nav_right" id="nav_right">
-                <a href="#" class="current">下载简介</a>
+                <a href="qqq.pdf" download="qqq" class="current">下载简介</a>
                 <a href="#" class="question">咨询留言</a>
                 <a href="#">加盟热线:400-000-0000</a>
             </div>
