--- a/Strength.html
+++ b/Strength.html
@@ -203,6 +203,7 @@
 <script src="lib/bootstrap.min.js"></script>
 <script src="lib/current.js"></script>
 <script src="http://www.lanrenzhijia.com/ajaxjs/lanrenzhijia.js"></script>
+<script src="http://zeptojs.com/zepto.min.js"></script>
 <script>
     $(document).ready(function () {
         $('#nav_right .question').bind('click',function () {
