--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 <section class="section-b">
     <div class="container">
         <div class="text">
-            <h2 id="link">不从零开始"  的特许加盟</h2>
+            <h2 id="link">"不从零开始"  的特许加盟</h2>
             <p>“不从零开始“的特许加盟，就是将成熟的元融商业体系与元融特有的商业资源无条件的全部转让给通过资格评估的加盟申请人，同时授权其在当地
                 注册的“北京元融商业管理（某地）分公司”。</p>
             <p>凡加盟北京元融商业管理有限公司，将在北京对其进行定期专门培训，例如到会员店、分库、总库，及“会员采购中心”参观考察等等，有专门的培
