--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
         <h3>策略</h3>
         <p>STRATEGY</p>
         <div class="content">
-            <p class="text"> “一个源于商业管理与零售业销售的服务专家！”<span>北京元融商业管理有限公司（简称：元融商业）注册资金五千万元整。元融商业是一群有愿景、有
-使命的”优质人“所组成发起的。元融商业以商业管理服务为主导，专注于零售业销售解决方案服务领域。元融商业通过强大的商业资本已展开面向全国
-                的投融资战略布局，计划在三年内形成覆盖全国大部分地区和</span>30多个省市，<span>届时会拥有</span>30万个零售终端会员店，<span>扶持并控股</span>100多个会员店需求的食品生产企业，
-                2万个元融品牌直营样板店，<span>根植于实业体系建立“元融云计划数据中心”，</span>实现管理资产过百亿。</p>
+            <p class="text"> “一个源于商业管理与零售业销售的服务专家！”<span>北京元融商业管理有限公司（简称：元融商业）是一群有愿景、有使命的“优质人”所组成并发起，
+以商业管理服务为主导，专注于零售业销售解决方案服务领域，通过强大的商业资本，依托“元融云计划数据中心”，展开面向全国的投融资战略布局，
+计划在三年内形成覆盖全国大部分地区，拥有</span>30万个零售终端会员店、2万个元融品牌直营标准店，<span>扶持并控股</span>100多个食品生产企业，
+                2万个元融品牌直营样板店，实现管理资产过百亿。</p>
         </div>
         <div class="title_icon">
             <div class="title-top">
@@ -151,13 +151,16 @@
     <div class="container">
         <div class="text">
             <h2 id="link">"不从零开始"  的特许加盟</h2>
-            <p>“不从零开始“的特许加盟，就是将成熟的元融商业体系与元融特有的商业资源无条件的全部转让给通过资格评估的加盟申请人，同时授权其在当地
-                注册的“北京元融商业管理（某地）分公司”。</p>
-            <p>凡加盟北京元融商业管理有限公司，将在北京对其进行定期专门培训，例如到会员店、分库、总库，及“会员采购中心”参观考察等等，有专门的培
-                训师对加盟者进行系列培训；为减轻加盟者的负担，元融公司对加盟者的分公司实行先发货。</p>
-            <p>待分公司5000家会员店进入正常运作后，总公司将从其中选出100家面积在25平米以上，<mark>年销售额超过50万以上</mark>的会员店，共投资350万元人民币为
-                其免费装修（新地板、新天花板、新墙面、新货架、新收银台、新灯箱、新门面、统一标准、统一色彩）使其成为“元融标准店”其每年5000万销售的利润
-                为分公司所有。元融公司保证加盟者<mark>每年利润不低于200万元人民币</mark>。（如果加上100个“元融标准店”该分公司年收益可超过500万元）</p>
+            <p>“不从零开始”的特许加盟，加盟者有如下待遇:</p>
+            <p>☆元融商业将成熟的元融商业体系与元融特有的商业资源无条件地转让给获得加盟资格的申请人，同时授权于申请人在当地注册“北京元融商业管理（某地）分公司”，出具
+                注册需要的全部资料。</p>
+            <p>☆元融商业将在北京对加盟者进行专门培训，安排专业的培训师讲解元融商业运行管理模式，介绍元融商业服务保障理念，辅导初创期间滚动发展方法，组织到会员店、总库
+                分库及“会员采购中心”，参观考察和实地见学等。</p>
+            <p>☆元融商业对加盟者留有半个月的账期，即先发货后收钱，让您没有首批进货的资金压力。</p>
+            <p>☆在您所在城区拥有5000家会员店进入正常运作后，元融商业将投资300万元人民币，在分公司所在城区挑选100家面积在25平米以上，年销售额超过50万的商店，为其免费
+                装修门头、灯箱 、天花板、墙面、地板，配置崭新的货架、收银台，实行统一标准、统一色调、统一布局，使其成为“元融标准店”，以此提高品牌影响力，带动便利销售。</p>
+            <p>☆元融商业保证证加盟者每年利润不低于200万元人民币。</p>
+            <p>总之，元融商业将用洪荒之力，助推加盟者走向成功！</p>
         </div>
     </div>
 </section>
