--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </li>
             </ul>
             <div class="nav navbar-right nav_right active" id="nav_right">
-                <a class="current" href="qqq.pdf" download="qqq">下载简介</a>
+                <a class="current" href="#" data-toggle="modal" data-target="#myModal4">公司简介</a>
                 <a href="#" class="question">咨询留言</a>
                 <a href="#">加盟热线:400-000-0000</a>
             </div>
@@ -61,7 +61,7 @@
         </ol>
         <div class="carousel-inner" role="listbox">
             <div class="item active" align="center">
-                <img src="style/img/banner1.png" alt=""/>
+                <img class="lazy" data-original="style/img/banner1.png" alt=""/>
             </div>
             <div class="item" align="center">
                 <img src="style/img/banner3.png" alt=""/>
@@ -87,8 +87,7 @@
         <div class="content">
             <p class="text"> “一个源于商业管理与零售业销售的服务专家！”<span>北京元融商业管理有限公司（简称：元融商业）是一群有愿景、有使命的“优质人”所组成并发起，
 以商业管理服务为主导，专注于零售业销售解决方案服务领域，通过强大的商业资本，依托“元融云计划数据中心”，展开面向全国的投融资战略布局，
-计划在三年内形成覆盖全国大部分地区，拥有</span>30万个零售终端会员店、2万个元融品牌直营标准店，<span>扶持并控股</span>100多个食品生产企业，
-                2万个元融品牌直营样板店，实现管理资产过百亿。</p>
+计划在三年内形成覆盖全国大部分地区，拥有</span>50万个零售终端会员店、2万个元融品牌直营标准店，<span>扶持并控股</span>100多个食品生产企业，实现管理资产过百亿。</p>
         </div>
         <div class="title_icon">
             <div class="title-top">
@@ -152,14 +151,13 @@
         <div class="text">
             <h2 id="link">"不从零开始"  的特许加盟</h2>
             <p>“不从零开始”的特许加盟，加盟者有如下待遇:</p>
-            <p>☆元融商业将成熟的元融商业体系与元融特有的商业资源无条件地转让给获得加盟资格的申请人，同时授权于申请人在当地注册“北京元融商业管理（某地）分公司”，出具
-                注册需要的全部资料。</p>
-            <p>☆元融商业将在北京对加盟者进行专门培训，安排专业的培训师讲解元融商业运行管理模式，介绍元融商业服务保障理念，辅导初创期间滚动发展方法，组织到会员店、总库
-                分库及“会员采购中心”，参观考察和实地见学等。</p>
-            <p>☆元融商业对加盟者留有半个月的账期，即先发货后收钱，让您没有首批进货的资金压力。</p>
-            <p>☆在您所在城区拥有5000家会员店进入正常运作后，元融商业将投资300万元人民币，在分公司所在城区挑选100家面积在25平米以上，年销售额超过50万的商店，为其免费
-                装修门头、灯箱 、天花板、墙面、地板，配置崭新的货架、收银台，实行统一标准、统一色调、统一布局，使其成为“元融标准店”，以此提高品牌影响力，带动便利销售。</p>
-            <p>☆元融商业保证证加盟者每年利润不低于200万元人民币。</p>
+            <p>☆元融商业将成熟的元融商业体系与元融特有的商业资源无条件地转让给加盟者，同时授权于加盟者在当地注册“北京元融商业管理（某地）分公司”，出具注册需要的全部资料。</p>
+            <p>☆元融商业将在北京对加盟者进行专门培训，安排专业的培训师讲解元融商业运行管理模式，介绍元融商业服务保障理念，辅导初创期间滚动发展方法，组织到会员店、总库、分库及“会员采购中心”参观考察。</p>
+            <p>☆公司将无偿提供从进、销、存到大小物流配送以至终端APP的下载全套软件系统，并和公司的大系统进行对接。</p>
+            <p>☆元融商业对加盟者留有半个月的账期，即先发货后收钱，让加盟者没有首批进货的资金压力。</p>
+            <p>☆在加盟者所在地区拥有一定规模的会员店（七大城市应拥有15000家，省会城市应拥有10000家，地区市应拥有5000家）并进入正常运作后，由元融商业投资，在分公司所在地区会员店中按10%的比例，挑选拥有20平米地理位置优越的自有或长租（5年以上）店面且年利润在50万元以上的会员店升级为“元触标准店”。会员店升级，由元融商业免费装修门头、灯箱 、天花板、墙面、地板，配置崭新的货架、收银台，实行统一标准、统一色调、统一布局，以此提高品牌影响力，带动会员店销售。</p>
+            <p>☆元融商业保证加盟者每年净利润不低于200万元人民币。</p>
+            <p style="font-weight: bold">☆每个直辖市、省会城市和地区城市只设一个分公司，先加盟者占先机。</p>
             <p>总之，元融商业将用洪荒之力，助推加盟者走向成功！</p>
         </div>
     </div>
@@ -245,6 +243,28 @@
                         </div>
                     </div>
                 </div>
+                <div class="theme-popover-mask"></div>
+                <div class="modal fade" id="myModal4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h3 class="modal-title" id="myModalLabe4">公司简介</h3>
+                            </div>
+                            <div class="modal-body">
+                                根据十八大报告精神，城镇化未来将成为中国全面建设小康社会的重要载体，更是撬动内需的最大潜力所在。
+                                北京元融商业管理有限公司正是在这样的政策背景下聚集了一群有愿景、有使命的“优质人”，坚持以《国家新型城镇化规划》为政策指导，
+                                整合海内外一流的商业管理理念与优质资源，打造国际一流的
+                                商业综合服务体系平台。
+                                <p style="font-size:15px;text-indent: 2em;color:#444444;text-align: left;">
+                                    北京元融商业管理有限公司(以下简称“元融商业”），是一家以商业服务为主导，专注于零售业销售解决方案服务领域，依托“元融云计划数据中心”，通过强大的商业资本运作，助推零售行业健康成长的一家多元化商业综合管理有限公司，注册资金5000万元。总部设在北京，旗下拥有40余家控股企业，业务涵盖食品制造、食品进出口贸易、商业投融资、文化娱乐、IT研发等。元融商业汇聚了商业管理、食品安全生产、IT、数据安全、投资管理、文化创意产业等多方面高端人才。拥有一支由资深专业人士组成的商业管理运营团队、企业投资管理团队、食品安全生产团队、快消零售终端运营团队、IT技术研发团队。团队成员大多在大型企业和国内外知名商业、金融、食品生产、文化创意、高新技术等企业或机构担任过重要职务并取得出色成绩，部分成员主持过多项国内、国际成功投资项目，在商业运营、投资管理、企业电商、食品生产等方面积累了丰富经验，且具有先进的技术研发能力和广泛的社会资源。元融商业深谙海内外零售业发展规律和趋势，植根于中国本土市场，瞄准供需两侧迫切需求，大胆做出前瞻性判断，运用现代技术手段，整合市场信息资源，激活食品生产资源，调动优质社会资源，开发终端零售资源，占据消费市场前沿。目前，元融商业已经拥有北京世纪元融酒业有限公司、元融控股公司等多家全资子公司及40多家控股生产企业，同时与中国平安银行达成实质性战略联盟合作意向。经过短短一年的努力，元融商业仅在北京已经拥有20000多家社区零售会员店，并与200多家食品、日化、调料、糕点、酒水等生产厂家建立了合作伙伴关系。在北京城区建立了4个总库、40个分库，配备了160辆运送车，月订货配送量达3800多万元，现有员工200多人。元融商业已面向全国展开投融资战备布局，计划在三年内覆盖全国88个人口在500万以上的一、二、三线城市。届时，元融商业将会拥有50万个零售终端会员店和2万个元融品牌直营标准店；扶持并控股100多个名优特食品生产企业；根植于实业体系建立“元融云计划数据中心”，实现管理资产过百亿。未来，元融商业将一直秉承和践行“细、情、势”的企业精神，以“诚信、共赢”为企业信仰，积极拓展渠道，创新服务模式，关注中国未来商业体系的发展，助推零售行业健康成长。
+                                </p>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="col-md-4">
                 <img src="style/img/touxiang.png"/>
@@ -288,6 +308,8 @@
 <script src="lib/jquery.js"></script>
 <script src="lib/bootstrap.min.js"></script>
 <script src="lib/current.js"></script>
+<script src="lib/jquery.lazyload.js?v=1.9.1"></script>
+<script src="lib/shiv.js"></script>
 <script src="http://www.lanrenzhijia.com/ajaxjs/lanrenzhijia.js"></script>
 <script src="lib/animatescroll.js"></script>
 <script>
@@ -301,6 +323,11 @@
             img_path : 'http://demo.lanrenzhijia.com/2014/service1119/images/lanrenzhijia.jpg',	//设置图片路径
             qq : '123456789',	//设置QQ号码
         });
+    });
+    $(function() {
+
+        $("img.lazy").lazyload({effect: "fadeIn"});
+
     });
 </script>
 </html>
