--- a/Strength.html
+++ b/Strength.html
@@ -1,1 +1,243 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>实力展示</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,height=device-height, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="target-densitydpi=device-dpi, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.0/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="style/bootstrap.min.css"/>
+    <link rel="stylesheet" href="style/index.css"/>
+    <link rel="stylesheet" href="style/media.css"/>
+    <link rel="stylesheet" href="style/display.css"/>
+</head>
+<body>
+<nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#"><img src="style/img/logo1.png"><h2>元融招商</h2></a>
+        </div>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav" id="topnav">
+                <li>
+                    <a id="link1" href="index.html" title="特许加盟体系">特许加盟体系</a>
+                </li>
+                <li>
+                    <a href="Application.html" title="申请条件与流程">申请条件与流程</a>
+                </li>
+                <li>
+                    <a href="Strength.html" class="current" title="实力展示">实力展示</a>
+                </li>
+            </ul>
+            <div class="nav navbar-right nav_right" id="nav_right">
+                <a class="current" href="#" data-toggle="modal" data-target="#myModal">公司简介</a>
+                <a href="#" class="question">咨询留言</a>
+                <a href="#">加盟热线:400-000-0000</a>
+            </div>
+            <div class="theme-popover-mask"></div>
+            <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h3 style="text-align: center" class="modal-title" id="myModalLabe4">公司简介</h3>
+                        </div>
+                        <div class="modal-body">
+                            根据十八大报告精神，城镇化未来将成为中国全面建设小康社会的重要载体，更是撬动内需的最大潜力所在。
+                            北京元融商业管理有限公司正是在这样的政策背景下聚集了一群有愿景、有使命的“优质人”，坚持以《国家新型城镇化规划》为政策指导，
+                            整合海内外一流的商业管理理念与优质资源，打造国际一流的
+                            商业综合服务体系平台。
+                            <p style="font-size:15px;text-indent: 2em;color:#444444;text-align: left;">
+                                北京元融商业管理有限公司(以下简称“元融商业”），是一家以商业服务为主导，专注于零售业销售解决方案服务领域，依托“元融云计划数据中心”，通过强大的商业资本运作，助推零售行业健康成长的一家多元化商业综合管理有限公司，注册资金5000万元。总部设在北京，旗下拥有40余家控股企业，业务涵盖食品制造、食品进出口贸易、商业投融资、文化娱乐、IT研发等。元融商业汇聚了商业管理、食品安全生产、IT、数据安全、投资管理、文化创意产业等多方面高端人才。拥有一支由资深专业人士组成的商业管理运营团队、企业投资管理团队、食品安全生产团队、快消零售终端运营团队、IT技术研发团队。团队成员大多在大型企业和国内外知名商业、金融、食品生产、文化创意、高新技术等企业或机构担任过重要职务并取得出色成绩，部分成员主持过多项国内、国际成功投资项目，在商业运营、投资管理、企业电商、食品生产等方面积累了丰富经验，且具有先进的技术研发能力和广泛的社会资源。元融商业深谙海内外零售业发展规律和趋势，植根于中国本土市场，瞄准供需两侧迫切需求，大胆做出前瞻性判断，运用现代技术手段，整合市场信息资源，激活食品生产资源，调动优质社会资源，开发终端零售资源，占据消费市场前沿。目前，元融商业已经拥有北京世纪元融酒业有限公司、元融控股公司等多家全资子公司及40多家控股生产企业，同时与中国平安银行达成实质性战略联盟合作意向。经过短短一年的努力，元融商业仅在北京已经拥有20000多家社区零售会员店，并与200多家食品、日化、调料、糕点、酒水等生产厂家建立了合作伙伴关系。在北京城区建立了4个总库、40个分库，配备了160辆运送车，月订货配送量达3800多万元，现有员工200多人。元融商业已面向全国展开投融资战备布局，计划在三年内覆盖全国88个人口在500万以上的一、二、三线城市。届时，元融商业将会拥有50万个零售终端会员店和2万个元融品牌直营标准店；扶持并控股100多个名优特食品生产企业；根植于实业体系建立“元融云计划数据中心”，实现管理资产过百亿。未来，元融商业将一直秉承和践行“细、情、势”的企业精神，以“诚信、共赢”为企业信仰，积极拓展渠道，创新服务模式，关注中国未来商业体系的发展，助推零售行业健康成长。
+                            </p>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</nav>
+<div id='cs_box' style="display: none;">
+    <span class='cs_title'>咨询留言</span>
+    <span class='cs_close'>X&nbsp;关闭</span>
+    <div class='cs_img'>
+        <p>您好，欢迎您进入元融招商网站</p>
+        <p>元融为您服务！</p>
+        <img src="style/img/ren.png"/>
+        <div class='cs_btn'>点击咨询</div>
+    </div>
+</div>
+<article class="banner">
+    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators border">
+            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner" role="listbox">
+            <div class="item active" align="center">
+                <img class="lazy" data-original="style/img/banner4.png" alt="">
+                <div class="carousel-caption">
+                    ...
+                </div>
+            </div>
+            <div class="item" align="center">
+                <img src="style/img/banner3.png" alt="">
+                <div class="carousel-caption">
+                    ...
+                </div>
+            </div>
+            <div class="item" align="center">
+                <img src="style/img/banner1.png" alt="">
+                <div class="carousel-caption">
+                    ...
+                </div>
+            </div>
+        </div>
+        <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+</article>
+<section class="section-b" style="border:none;">
+    <div class="container">
+        <div class="text">
+            <h2 id="link" style="font-weight: 500;">会员店展示</h2>
+            <ul class="row">
+                <li class="col-md-4">
+                    <img class="lazy" data-original="style/img/a.png"/>
+                </li>
+                <li class="col-md-4">
+                    <img class="lazy" data-original="style/img/q.png"/>
+                </li>
+                <li class="col-md-4">
+                    <img class="lazy" data-original="style/img/qqwq.png"/>
+                </li>
+                <li class="col-md-4">
+                    <img class="lazy" data-original="style/img/uuy.png"/>
+                </li>
+                <li class="col-md-4">
+                    <img class="lazy" data-original="style/img/w.png"/>
+                </li>
+                <li class="col-md-4">
+                    <img class="lazy" data-original="style/img/www.png"/>
+                </li>
+            </ul>
+        </div>
+        <div class="text text1">
+            <h2 id="link" style="font-weight: 500;">商品展示</h2>
+            <ul class="row">
+                <li class="col-md-4">
+                    <img class="lazy" data-original="style/img/ccc.png"/>
+                </li>
+                <li class="col-md-4">
+                    <img class="lazy" data-original="style/img/d.png"/>
+                </li>
+                <li class="col-md-4">
+                    <img class="lazy" data-original="style/img/dd.png"/>
+                </li>
+                <li class="col-md-4">
+                    <img class="lazy" data-original="style/img/ddd.png"/>
+                </li>
+                <li class="col-md-4">
+                    <img class="lazy" data-original="style/img/dddd.png"/>
+                </li>
+                <li class="col-md-4">
+                    <img class="lazy" data-original="style/img/e.png"/>
+                </li>
+                <li class="col-md-4">
+                    <img class="lazy" data-original="style/img/ee.png"/>
+                </li>
+                <li class="col-md-4">
+                    <img class="lazy" data-original="style/img/eee.png"/>
+                </li>
+                <li class="col-md-4">
+                    <img class="lazy" data-original="style/img/eeee.png"/>
+                </li>
+                <li class="col-md-4">
+                    <img class="lazy" data-original="style/img/gg.png"/>
+                </li>
+                <li class="col-md-4">
+                    <img class="lazy" data-original="style/img/ggg.png"/>
+                </li>
+                <li class="col-md-4">
+                    <img class="lazy" data-original="style/img/r.png"/>
+                </li>
+                <li class="col-md-4">
+                    <img class="lazy" data-original="style/img/rr.png"/>
+                </li>
+                <li class="col-md-4">
+                    <img class="lazy" data-original="style/img/rrr.png"/>
+                </li>
+                <li class="col-md-4">
+                    <img class="lazy" data-original="style/img/rrrr.png"/>
+                </li>
+            </ul>
+        </div>
+    </div>
+</section>
+<footer class="footer">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <h3>一个源于商业管理与零售业销售的服务专家</h3>
+                <img src="style/img/111.png"/>
+                <h2>400-100-0000</h2>
+                <p>联系我们：010-67617210</p>
+                <p>公司地址：北京市丰台区宋家庄地铁站G口出城乡开发大厦四层</p>
+                <p>招商部：18801032220</p>
+                <p>版权所有：北京元融商业管理有限公司</p>
+            </div>
+            <div class="col-md-6">
+                <span><img src="style/img/erweima.png"/></span>
+                <span><img src="style/img/gongzhonghao.png"/></span>
+                <p class="number">元融招商公众号</p>
+                <p class="number1">元融招商部</p>
+            </div>
+        </div>
+    </div>
+</footer>
+</body>
+<script src="lib/jquery.js"></script>
+<script src="lib/bootstrap.min.js"></script>
+<script src="lib/current.js"></script>
+<script src="lib/jquery.lazyload.js?v=1.9.1"></script>
+<script src="lib/shiv.js"></script>
+<script src="http://www.lanrenzhijia.com/ajaxjs/lanrenzhijia.js"></script>
+<script src="http://zeptojs.com/zepto.min.js"></script>
+<script>
+    $(document).ready(function () {
+        $('#nav_right .question').bind('click',function () {
+            $('#cs_box').show();
+        })
+    })
+    myEvent(window,'load',function(){
+        cs_box.set({
+            img_path : 'http://demo.lanrenzhijia.com/2014/service1119/images/lanrenzhijia.jpg',	//设置图片路径
+            qq : '123456789',	//设置QQ号码
+        });
+    });
+    $(function() {
+
+        $("img.lazy").lazyload({effect: "fadeIn"});
+
+    });
+</script>
+</html>
+
+
 
