--- a/index.html
+++ b/index.html
@@ -224,18 +224,43 @@
         <p>SUCCESSFUL</p>
         <div class="row">
             <div class="col-md-4">
-                <img src="style/img/touxiang.png"/>
-                <h4>王国庆</h4>
-                <p>祖籍:江苏省</p>
-                <p>60家商业会员店</p>
-                <button class="btn btn-warning" data-toggle="modal" data-target="#myModal">了解详情</button>
+                <img src="style/img/touxiang1.png"/>
+                <h4>王先生</h4>
+                <p>祖籍:甘肃省</p>
+                <p>500家会员店</p>
+                <button class="btn btn-warning" data-toggle="modal" data-target="#myModal1">了解详情</button>
                 <div class="theme-popover-mask"></div>
-                <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                <div class="modal fade" id="myModal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                     <div class="modal-dialog">
                         <div class="modal-content">
-                            <div class="modal-body">大家好！我是王国庆。我曾在南非经营了十年的连锁超市，也发展到了一定的规模，那时虽然每家超市都经营得很好，但是随着中国经济的高速发展，我还是有了回国发展的念头。每年回国我都能看到元融商业在国内的迅速成长，我觉得加盟元融商业一定是我回国发展的新起点。
-                                由于我一直在国外经商，对于国内的商业环境根本不熟，我担心自己适应不了中国较复杂的经商环境，也担心自己是否能胜任元融商业的管理，这些疑问在多年后证明都不是问题，元融商业规范的经营和卓越的企业文化，使我很快地融入了这个大家庭。
-                                元融商业树百年品牌企业能保持基业长青，和卓越的企业文化离不开。在这个大家庭里，不仅让我们的事业得到了很好的发展，更重要的是，也让我养成了不断学习和进取的好习惯。目前，我已成功经营着60家元融商业会员店，随着品牌的不断创新与发展，作为加盟商的我，各方面的能力也随之得到了极大的提升。
+                            <div class="modal-body">
+                                我是甘肃的加盟商王先生，我最初见到“北京元融商业管理公司”网站诚招加盟商的消息时。觉得我能开5000个店有点不可思议，但我一直想找一个好的项目做做，所以就抱着试一试的态度去了北京，到了元融商业管理公司他们并没有拿我当客人，第一天就派他们的业务员带我去路边的一个便利店去实习，我才知道怎样和便利店签署会员合同，他们又带我参观了分库，总库，会员购物中心。位于北京风景区怀柔的北京元融商业管理公司的会员培训基地。一圈下来觉得内容太丰富了，他们又派培训部的培训师认真的给我们系统的做了2天培训，我突然觉得有底了，我回来只用了半个月的时间就开发了500个会员店，建了一个分库，20天后总部就发过来20万的货，我们10天就卖完了这笔货，刚干了一个半月就卖了50万的货，算了算，赚了7.5万元的毛利。纯利润赚了2.5万。500个会员店就赚了2.5万，要是5000个店就赚了25万元，这么看一年赚200万还真没问题。
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="theme-popover-mask"></div>
+                <div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-body">
+                                我是陕西的加盟商李先生，要搁过去说我能做一万个会员店，一年能赚300万，打死我我也不信，“结果到北京元融商业管理公司”一培训，觉得也没什么难的，回来照方抓药，找了4个业务员，我把我在北京学的一点不落的给他们讲了一遍，把北京元融公司发的话术本让他们学习熟记在心，8个业务员，3个月开发了3000个会员店，建立的6个分库，一个总库。这速度连我都吃惊。北京总公司在我刚做完500个会员店一个分库时就给我发货了，到今天我已卖了400万 的货，赚了 20万的纯利润了。刚3个月，3000个会员店，要是1万个会员店，一年赚300万绝对没问题。
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="theme-popover-mask"></div>
+                <div class="modal fade" id="myModal3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-body">
+                                我是黑龙江的曹女士。要说做小食品生意，我不外行，做了十几年我也赚了一百多万，但是我看了北京元融公司的加盟邀请时，真被他们独特的方式吸引了，到北京学了几天，跟上了大学似得，真觉得不错，2017年我就用元融商业这个模式，开发他15000个会员店，，做就做大的，没啥难事儿，我们这儿到处都是小店，一个会员店每月才卖1000元的货，更不是个事儿，这事儿我就得和老爷们较较劲。一年不挣他四五百万的算我没本事。
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
@@ -250,7 +275,7 @@
                             <div class="modal-header">
                                 <h3 class="modal-title" id="myModalLabe4">公司简介</h3>
                             </div>
-                            <div class="modal-body">
+                            <div class="modal-body"style="text-indent: 2em;">
                                 根据十八大报告精神，城镇化未来将成为中国全面建设小康社会的重要载体，更是撬动内需的最大潜力所在。
                                 北京元融商业管理有限公司正是在这样的政策背景下聚集了一群有愿景、有使命的“优质人”，坚持以《国家新型城镇化规划》为政策指导，
                                 整合海内外一流的商业管理理念与优质资源，打造国际一流的
@@ -267,18 +292,18 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <img src="style/img/touxiang.png"/>
-                <h4>王国庆</h4>
-                <p>祖籍:江苏省</p>
-                <p>60家商业会员店</p>
-                <button class="btn btn-warning" data-toggle="modal" data-target="#myModal">了解详情</button>
+                <img src="style/img/touxiang3.png"/>
+                <h4>李先生</h4>
+                <p>祖籍:陕西省</p>
+                <p>3000家会员店</p>
+                <button class="btn btn-warning" data-toggle="modal" data-target="#myModal2">了解详情</button>
             </div>
             <div class="col-md-4">
-                <img src="style/img/touxiang.png"/>
-                <h4>王国庆</h4>
-                <p>祖籍:江苏省</p>
-                <p>60家商业会员店</p>
-                <button class="btn btn-warning" data-toggle="modal" data-target="#myModal">了解详情</button>
+                <img src="style/img/touxiang2.png"/>
+                <h4>曹女士</h4>
+                <p>祖籍:黑龙江省</p>
+                <p>15000家会员店</p>
+                <button class="btn btn-warning" data-toggle="modal" data-target="#myModal3">了解详情</button>
             </div>
         </div>
     </div>
